--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "watch": "webpack --colors --watch"
   },
   "author": "D. Seletkov",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/Dyasik/maze.git"
+  },
+  "bugs": {
+    "url" : "https://github.com/Dyasik/maze/issues"
+  },
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.0",
